--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,15 +1,23 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+<%- if !user_signed_in? %>
+	<%- if controller_name != 'sessions' %>
+	  <%= link_to "Log in", new_session_path(resource_name) %><br />
+	<% end -%>
 <% end -%>
 
-<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+<%- if user_signed_in? %>
+	<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  
 <% end -%>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+<%- if !user_signed_in? %>
+	<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+	  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+	<% end -%>
+<% end -%>
+
+<%- if !user_signed_in? %>
+	<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+	  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+	<% end -%>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
