--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,10 +1,22 @@
-<h1>Cards#index</h1>
-<p>Find me in app/views/cards/index.html.erb</p>
-
 <%- if user_signed_in? %>
 	Bienvenido usuario 
 	<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
 <%else%>
 	<%=render file:"app/views/users/sessions/new.html.erb"%>
 	
+<%end%>
+
+<% jobopenings=Jobopening.all
+for jobopening in jobopenings
+%>
+
+<table>
+	<tr>
+		<td><%=jobopening.tittle%></td>
+	</tr>
+	<tr>
+		<td><%=jobopening.description%></td>
+	</tr>	
+	
+</table>
 <%end%>
