--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -9,6 +9,9 @@
 
 <form action="/cards/search">
 	<input type="text" name="search_value" placeholder="Buscar..." />
+	<select name="search_category">
+		<%=options_for_select(@search_options)%>
+	</select>
 	<input type="submit" value="buscar" />
 </form>
 
