--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,22 +1,17 @@
-<%- if user_signed_in? %>
-	Bienvenido usuario 
+<%if user_signed_in? %>
+	Bienvenido <%=current_user.email%> 
 	<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+	<a href="cards/dashboard">Panel de administracion</a>
 <%else%>
-	<%=render file:"app/views/users/sessions/new.html.erb"%>
 	<div style="text-align: right"><%=render file:"app/views/users/sessions/new.html.erb"%></div>
-	
-	
 <%end%>
 
-<% jobopenings=Jobopening.all
-for jobopening in jobopenings
-%>
 <form action="/cards/search">
 	<input type="text" name="search_value" placeholder="Buscar..." />
 	<select name="search_category">
 		<%=options_for_select(@search_options)%>
 	</select>
-	<input type="submit" value="buscar" />
+	<input type="submit" value="Buscar" />
 </form>
 
 <% 
@@ -24,28 +19,28 @@ for jobopening in @jobopenings
 %>
 <div style="border-style: solid;margin: 5px">
 	<table>
-	<tr>
-		<td>TITULO DE LA OFERTA:<%=jobopening.tittle%></td>
-	</tr>
-	<tr>
-		<td>CATEGORIA:<%=jobopening.profession.category.tittle%></td>
-	</tr>
-	<tr>
-		<td>PROFESION:<%=jobopening.profession.tittle%></td>
-	</tr>
-	<tr>
-		<td>DESCRIPCION:<%=jobopening.description%></td>
-	</tr>	
-	<tr>
-		<td>REQUISITOS:<%=jobopening.requirement%></td>
-	</tr>
-	<tr>
-		<td>FRANJA SALARIAL:<%=jobopening.salary_min%>-<%=jobopening.salary_max%></td>
-	</tr>
-	<tr>
-		<td>TIPO DE CONTRATO:<%=jobopening.contract%></td>
-	</tr>
-</table>
+		<tr>
+			<td>TITULO DE LA OFERTA:<%=jobopening.tittle%></td>
+		</tr>
+		<tr>
+			<td>CATEGORIA:<%=jobopening.profession.category.tittle%></td>
+		</tr>
+		<tr>
+			<td>PROFESION:<%=jobopening.profession.tittle%></td>
+		</tr>
+		<tr>
+			<td>DESCRIPCION:<%=jobopening.description%></td>
+		</tr>	
+		<tr>
+			<td>REQUISITOS:<%=jobopening.requirement%></td>
+		</tr>
+		<tr>
+			<td>FRANJA SALARIAL:<%=jobopening.salary_min%>-<%=jobopening.salary_max%></td>
+		</tr>
+		<tr>
+			<td>TIPO DE CONTRATO:<%=jobopening.contract%></td>
+		</tr>
+	</table>
 </div>
 
 <%end%>
