--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,7 +1,7 @@
 <%- if !user_signed_in? %>
-	<%- if controller_name != 'sessions' %>
+<!--	<%- if controller_name != 'sessions' %>
 	  <%= link_to "Log in", new_session_path(resource_name) %><br />
-	<% end -%>
+	<% end -%>-->
 <% end -%>
 
 <%- if user_signed_in? %>
