--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -20,26 +20,16 @@ for jobopening in @jobopenings
 <div style="border-style: solid;margin: 5px">
 	<table>
 		<tr>
-			<td>TITULO DE LA OFERTA:<%=jobopening.tittle%></td>
+			<td><h2><%=jobopening.tittle%></h2></td>
 		</tr>
 		<tr>
-			<td>CATEGORIA:<%=jobopening.profession.category.tittle%></td>
-		</tr>
-		<tr>
-			<td>PROFESION:<%=jobopening.profession.tittle%></td>
-		</tr>
-		<tr>
-			<td>DESCRIPCION:<%=jobopening.description%></td>
+			<td><%=jobopening.description%></td>
 		</tr>	
+		
 		<tr>
-			<td>REQUISITOS:<%=jobopening.requirement%></td>
+			<td><a href="/cards/show?id=<%=jobopening.id%>">Detalle</a></td>
 		</tr>
-		<tr>
-			<td>FRANJA SALARIAL:<%=jobopening.salary_min%>-<%=jobopening.salary_max%></td>
-		</tr>
-		<tr>
-			<td>TIPO DE CONTRATO:<%=jobopening.contract%></td>
-		</tr>
+	
 	</table>
 </div>
 
