--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,2 +1,35 @@
-<h1>Cards#show</h1>
-<p>Find me in app/views/cards/show.html.erb</p>
+
+<p>DETALLE DE LA OFERTA</p>
+
+<div style="border-style: solid;margin: 5px">
+	<table>
+		<tr>
+			<td>TITULO DE LA OFERTA:<%=@jobopening.tittle%></td>
+		</tr>
+		<tr>
+			<td>CATEGORIA:<%=@jobopening.profession.category.tittle%></td>
+		</tr>
+		<tr>
+			<td>PROFESION:<%=@jobopening.profession.tittle%></td>
+		</tr>
+		<tr>
+			<td>DESCRIPCION:<%=@jobopening.description%></td>
+		</tr>	
+		<tr>
+			<td>REQUISITOS:<%=@jobopening.requirement%></td>
+		</tr>
+		<tr>
+			<td>FRANJA SALARIAL:<%=@jobopening.salary_min%>-<%=@jobopening.salary_max%></td>
+		</tr>
+		<tr>
+			<td>TIPO DE CONTRATO:<%=@jobopening.contract%></td>
+		</tr>
+		
+	
+	</table>
+
+</div>
+<a href="/cards/index">Volver</a><br />
+
+
+	
