--- a/app/views/cards/add.html.erb
+++ b/app/views/cards/add.html.erb
@@ -1,13 +1,13 @@
 <h2> Añadir anuncio</h2>
 	
 	<fieldset>
-	<%= form_tag({controller:"Jobopening",action:"add"},method:"get") do%>
+	<%= form_tag({controller:"cards",action:"create"},method:"get") do%>
 	<%= label_tag(:tittle, "Título de la oferta:")%><br />
 	<%= text_field_tag(:tittle)%><br />
 	<%= label_tag(:description, "Descripción:")%><br />
 	<%= text_field_tag(:description)%><br />
 	<%= label_tag(:image, "Imagen:")%><br />
-	<%= text_field_tag(:image)%><br />
+	<%= text_field_tag(:image,"",disabled: true)%><br />
 	<%= label_tag(:requirement, "Requisitos:")%><br />
 	<%= text_field_tag(:requirement)%><br />
 	<%= label_tag(:salary_min, "Salario Mínimo:")%><br />
@@ -15,12 +15,13 @@
 	<%= label_tag(:salary_max, "Salario Máximo:")%><br />
 	<%= text_field_tag(:salary_max)%><br />
 	<%= label_tag(:province, "Provincia")%><br />
-	<%= text_field_tag(:province)%><br />
-	<select>
-		<%= grouped_options_for_select(@grouped_options)%>	
-	</select>
+	<%= text_field_tag(:province,"",disabled: true)%><br />
 	
+	<%= select_tag(:profession, grouped_options_for_select(@grouped_options))%><br /><br />
+
 	<%= submit_tag("Crear Anuncio")%>
+	
+	
 	<% end %>
 	</fieldset>	
 	
