--- a/app/views/cards/dashboard.html.erb
+++ b/app/views/cards/dashboard.html.erb
@@ -14,20 +14,21 @@
 
 	
 	<% @jobopenings = Jobopening.all
-		for jobopening in @jobopenings %>
+		for jobopening in @jobopenings 
+			if current_user.id==jobopening.user_id%>
+				<tr>
+					<td><%=jobopening.tittle%></td>
+					<td><%=jobopening.description%></td>
+					<td><%=jobopening.requirement%></td> 
+					<td><%=jobopening.salary_min%></td> 
+					<td><%=jobopening.salary_max%></td> 
+					<td><%=jobopening.profession.tittle%></td> 
 		
-			<tr>
-				<td><%=jobopening.tittle%></td>
-				<td><%=jobopening.description%></td>
-				<td><%=jobopening.requirement%></td> 
-				<td><%=jobopening.salary_min%></td> 
-				<td><%=jobopening.salary_max%></td> 
-				<td><%=jobopening.profession.tittle%></td> 
-	
-				<td><a href="/cards/delete?id=<%=jobopening.id%>">Borrar</a></td>	
-				<td><a href="/cards/edit?id=<%=jobopening.id%>">Editar</a></td>		
-				
-			</tr>
+					<td><a href="/cards/delete?id=<%=jobopening.id%>">Borrar</a></td>	
+					<td><a href="/cards/edit?id=<%=jobopening.id%>">Editar</a></td>		
+					
+				</tr>
+			<%end%>
 		<% end%>
 		
 		</tbody>		
