option_user firts implementation, ordered alphabetically category and profession, fixed register

--- a/app/views/cards/add.html.erb
+++ b/app/views/cards/add.html.erb
@@ -17,7 +17,7 @@
 	<%= text_field_tag(:salary_max)%><br />
 	<%= label_tag(:province, "Provincia")%><br />
 	<%= text_field_tag(:province,"",disabled: true)%><br />
-	
+	<%= label_tag(:prpfession, "Profesión")%><br />
 	<%= select_tag(:profession, grouped_options_for_select(@grouped_options))%><br /><br />
 
 	<%= submit_tag("Crear Anuncio")%>
