--- a/app/views/cards/options_user.html.erb
+++ b/app/views/cards/options_user.html.erb
@@ -1,9 +1,9 @@
 
 
 
-<%= form_for @user, url:"/attachments/"+@user.id.to_s, html: { multipart: true } do |form| %>
+<%= form_for @user, :url=>"/cards/update_photo" do |form| %>
   <%= form.file_field :image %><br />
-  <%= submit_tag("Añadir")%><br />
+  <%= form.submit%><br />
 <% end %>
 <%= image_tag @user.image.url %>
 
