form of user options

--- a/app/views/cards/dashboard.html.erb
+++ b/app/views/cards/dashboard.html.erb
@@ -1,5 +1,5 @@
-<a href="/cards/add">Añadir nueva oferta</a>
-
+<a href="/cards/add">Añadir nueva oferta</a>   
+<a href="/cards/user_options">Opciones de usuario</a>
 <table>
 		<tr>
 			<th>Título de la Oferta</th>
