--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -16,19 +16,19 @@
 </form>
 
 <% 
-for jobopening in @jobopenings
+for job_opening in @job_openings
 %>
 <div style="border-style: solid;margin: 5px">
 	<table>
 		<tr>
-			<td><h2><%=jobopening.tittle%></h2></td>
+			<td><h2><%=job_opening.title%></h2></td>
 		</tr>
 		<tr>
-			<td><%=jobopening.description[0..150]+"..."%></td>
+			<td><%=job_opening.description[0..150]+"..."%></td>
 		</tr>	
 		
 		<tr>
-			<td><a href="/cards/show?id=<%=jobopening.id%>">Detalle</a></td>
+			<td><a href="/cards/show?id=<%=job_opening.id%>">Detalle</a></td>
 		</tr>
 	
 	</table>
