--- a/app/views/cards/dashboard.html.erb
+++ b/app/views/cards/dashboard.html.erb
@@ -1,27 +1,27 @@
 <a href="/cards/add">Añadir nueva oferta</a>   
-<a href="/cards/user_options">Opciones de usuario</a>
 <table>
-		<tr>
-			<th>Título de la Oferta</th>
-			<th>Descripción</th>
-			<!-- <th>Imagen</th>	 -->		
-			<th>Requisitos</th>	
-			<th>Franja Salarial</th>	
-			<!-- <th>Provincia</th> -->	
-			<th>Puesto de trabajo</th>				
-		</tr>
-		
-	<% @job_openings = JobOpening.all
-		for job_opening in current_user.job_openings%>
-				<tr>
-					<td><%=job_opening.title%></td>
-					<td><%=job_opening.description%></td>
-					<td><%=job_opening.requirement%></td> 
-					<td><%=job_opening.salary_min%></td> 
-					<td><%=job_opening.salary_max%></td> 
-					<td><%=job_opening.profession.title%></td> 
-					<td><a href="/cards/delete?id=<%=job_opening.id%>">Borrar</a></td>	
-					<td><a href="/cards/edit?id=<%=job_opening.id%>">Editar</a></td>					
-				</tr>
-		<% end%>		
+  <tr>
+    <th>Título de la Oferta</th>
+      <th>Descripción</th>
+      <!-- <th>Imagen</th>	 -->		
+      <th>Requisitos</th>	
+      <th colspan="2">Franja Salarial</th>	
+      <!-- <th>Provincia</th> -->	
+      <th>Puesto de trabajo</th>				
+    </tr>
+
+  <% @job_openings = JobOpening.all
+    for job_opening in current_user.job_openings%>
+    <tr>
+      <td><%=job_opening.title%></td>
+      <td><%=job_opening.description%></td>
+      <td><%=job_opening.requirement%></td> 
+      <td><%=job_opening.salary_min%> </td> 
+      <td><%=job_opening.salary_max%></td> 
+      <td><%=job_opening.profession.title%></td> 
+      <td><%=link_to("Borrar","/cards/delete?id=" + job_opening.id.to_s,
+                                    data:{confirm: '¿Seguro que quieres borrar?'})%></td>	
+      <td><a href="/cards/edit?id=<%=job_opening.id%>">Editar</a></td>					
+    </tr>
+  <% end%>		
 </table>
