--- a/app/views/cards/user_options.html.erb
+++ b/app/views/cards/user_options.html.erb
@@ -2,25 +2,21 @@
 
 <h2>DATOS DE LA EMPRESA</h2>
 
+<%= form_for @user , url: {action: "update_user"} do |f| %>
 
-<%= form_tag({controller:"cards",action:"update_data"},method:"get") do%>
-<%=label_tag(:email, "Email:")%><br />
-<%=text_field_tag(:email,value=@user.email)%><%= @user.errors[:email].first %><br />
-<%=label_tag(:company, "Empresa:")%><br />
-<%=text_field_tag(:company,value=@user.company)%><%= @user.errors[:company].first %><br />
-<%=label_tag(:cif, "CIF:")%><br />
-<%=text_field_tag(:cif,value=@user.cif)%><%= @user.errors[:cif].first %><br /><br />   
+  <%= f.label :email, 'Email:' %><br/>
+  <%= f.email_field :email %> <%= @user.errors[:email].first %><br />
+  <%= f.label(:company, 'Empresa:')%><br />
+  <%= f.text_field(:company)%> <%= @user.errors[:company].first %><br />
+  <%= f.label(:cif, 'CIF:')%><br />
+  <%= f.text_field(:cif)%> <%= @user.errors[:cif].first %><br />
+  <%= f.label(:image, "Logo empresa:")%><br />
+  <%= f.file_field :image %><br />
+  <%= image_tag @user.image.url %><br /> <br />  
 	
-<%= submit_tag("Modificar datos")%><br /><br /> 
+  <%= f.submit 'Modificar' %><br /><br /> 
 <% end %>
 
-<%= form_for @user, :url=>"/cards/update_photo" do |form| %>
-<%=label_tag(:image, "Logo empresa:")%><br />
-<%= form.file_field :image %><br />
-
-<%= image_tag @user.image.url %><br /><br />
-<%= form.submit "Guardar foto"%><br /><br />
 <a href="/cards/dashboard">Volver</a>
-<% end %>
 
 
