Added images to detalled job openning, added province, added contract, Refactorizated consults to model, index only 10 job opening and more link, ordered by date modified public and privated header changed devise mesagges

--- a/app/views/cards/dashboard.html.erb
+++ b/app/views/cards/dashboard.html.erb
@@ -10,12 +10,11 @@
       <th>Puesto de trabajo</th>				
     </tr>
 
-  <% @job_openings = JobOpening.all
-    for job_opening in current_user.job_openings%>
+  <%current_user.job_openings.each do |job_opening|%>
     <tr>
       <td><%=job_opening.title%></td>
-      <td><%=job_opening.description%></td>
-      <td><%=job_opening.requirement%></td> 
+      <td><%=job_opening.description.truncate(120)%></td>
+      <td><%=job_opening.requirement.truncate(120)%></td> 
       <td><%=job_opening.salary_min%> </td> 
       <td><%=job_opening.salary_max%></td> 
       <td><%=job_opening.profession.title%></td> 
