--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,23 +1,30 @@
 <h2> Modificar anuncio</h2>
 	
 	<fieldset>
-  <%= form_for @job_opening , url: {action: "update_job_opening"} do |f| %>
+  <%= form_for @job_opening , url: {action: "update"} do |f| %>
     <%= f.hidden_field :id%>
     <%= f.label :title, 'Titulo de la oferta:' %><br/>
-    <%= f.text_field :title %><br />
+    <%= f.text_field :title %> <%= @job_opening.errors[:title].first %><br />
     <%= f.label :description, 'Descripción:' %><br/>
-    <%= f.text_area :description, rows: 4, cols: 50 %><br />
-
+    <%= f.text_area :description, rows: 4, cols: 50 %> <%= @job_opening.errors[:description].first %><br />
+	<%= f.label :province, 'Provincia:' %><br/>
+	<%= f.select :province, options_for_select(@province_options), include_blank: true  %><br/>
     <%= f.label :requirement, 'Requisitos:' %><br/>
     <%= f.text_area :requirement, rows: 4, cols: 50 %><br/>
     <%= f.label :salary_min, 'Salario Mínimo:' %><br/>
     <%= f.number_field :salary_min, step: 1000, min: 0 %><br/>
     <%= f.label :salary_max, 'Salario Máximo:' %><br/>
     <%= f.number_field :salary_max, step: 1000, min: 0 %><br/>
-
+	<%= f.label :contract, 'Tipo de contrato:' %><br/>
+	<%= f.select :contract, options_for_select(@contract_options) %><br/>
     <%= f.label :profession, 'Profesión:' %><br/>
     <%= f.select :profession, grouped_options_for_select(@grouped_options,@job_opening.profession.id) %><br/><br/>
-    <%= f.submit 'Modificar' %>
+    <%= f.label(:image_job, "Imagen empleo:")%><br />
+  	<%= f.file_field :image_job %><br />
+  	<%if @job_opening.image_job.url%>
+  		<%= image_tag @job_opening.image_job.url, size: "320x200" %><br /> <br />
+    <%end%>
+    <%= f.submit 'Modificar' %><br /><br />
   <%end%>		
 	</fieldset>	
 	
