--- a/app/views/templates/_logged_header.html.erb
+++ b/app/views/templates/_logged_header.html.erb
@@ -1,9 +1,12 @@
 <header>
-Bienvenido <%=current_user.email%> 
-<%= link_to('Logout', destroy_user_session_path, :method => :delete) %></br>
-	<nav>
-		<a href="/">Inicio </a> 
-		<a href="/cards/dashboard">Panel de administracion </a> 
-		<a href="/cards/user_options">Opciones de usuario </a>
-	</nav>
+  <div style="text-align: right">
+    Bienvenido <%=current_user.email%>
+    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %></br>
+  </div>
+
+  <nav>
+    <a href="/">Inicio </a> 
+    <a href="/cards/dashboard">Panel de administracion </a> 
+    <a href="/cards/user_options">Opciones de usuario </a>
+  </nav>
 </header> 
