style corrections and user controller added

--- a/app/views/templates/_logged_header.html.erb
+++ b/app/views/templates/_logged_header.html.erb
@@ -1,12 +1,12 @@
 <header>
   <div style="text-align: right">
-    Bienvenido <%=current_user.email%>
+    Bienvenido <%= current_user.email %>
     <%= link_to('Logout', destroy_user_session_path, :method => :delete) %></br>
   </div>
 
   <nav>
     <a href="/">Inicio </a> 
     <a href="/admin/dashboard">Administrar ofertas </a> 
-    <a href="/admin/user_options">Opciones de usuario </a>
+    <a href="/users/user_options">Opciones de usuario </a>
   </nav>
 </header> 
