header and footer implementation

--- a/app/views/templates/_footer.html.erb
+++ b/app/views/templates/_footer.html.erb
@@ -1,3 +1,25 @@
-<footer>
-CristoSoft - Todos los derechos reservados
-</footer>
+<footer class="footer-distributed">
+
+			<div class="footer-right">
+
+				<a href="https://www.facebook.com/jobandtalent/"><i class="fa fa-facebook"></i></a>
+				<a href="https://twitter.com/jobandtalent_es"><i class="fa fa-twitter"></i></a>
+				<a href="https://www.linkedin.com/company/jobandtalent"><i class="fa fa-linkedin"></i></a>
+				<a href="https://github.com/manoloonline/JobOpeningCards"><i class="fa fa-github"></i></a>
+
+			</div>
+
+			<div class="footer-left">
+
+				<p class="footer-links">
+					<a href="#">Home</a>
+					·
+					<a href="#">About the App</a>
+					·
+					<a href="#">Contact</a>
+				</p>
+
+				<p>JobandTalent &copy; 2016</p>
+			</div>
+
+		</footer>
