basic set of tests, coverage included

--- a/app/views/templates/_logged_header.html.erb
+++ b/app/views/templates/_logged_header.html.erb
@@ -6,7 +6,7 @@
 
   <nav>
     <a href="/">Inicio </a> 
-    <a href="/users/dashboard">Administrar ofertas </a> 
+    <a href="/admin/dashboard">Administrar ofertas </a> 
     <a href="/users/user_options">Opciones de usuario </a>
   </nav>
 </header> 
