--- a/app/views/admin/edit.html.erb
+++ b/app/views/admin/edit.html.erb
@@ -9,7 +9,7 @@
     <%= f.text_area :description, rows: 4, cols: 50 %> <%= @job_opening.errors[:description].first %><br />
 	<%= f.label :province, 'Provincia:' %><br/>
 	<%= f.select :province, options_for_select(@province_options), include_blank: true  %><br/>
-    <%= f.label :requirement, 'Requisitos:' %><br/>
+    <%= f.label :requirement, 'Requisitos:' %> <%= @job_opening.errors[:requirement].first %><br/>
     <%= f.text_area :requirement, rows: 4, cols: 50 %><br/>
     <%= f.label :salary_min, 'Salario Mínimo:' %><br/>
     <%= f.number_field :salary_min, step: 1000, min: 0 %><br/>
