--- a/app/views/templates/_footer.html.erb
+++ b/app/views/templates/_footer.html.erb
@@ -12,11 +12,11 @@
 			<div class="footer-left">
 
 				<p class="footer-links">
-					<a href="#">Home</a>
+					<a href="/">Inicio</a>
 					·
-					<a href="#">About the App</a>
+					<a href="https://github.com/manoloonline/JobOpeningCards">Sobre nosotros</a>
 					·
-					<a href="#">Contact</a>
+					<a href="https://github.com/manoloonline/JobOpeningCards">Contacto</a>
 				</p>
 
 				<p>JobandTalent &copy; 2016</p>
