--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,8 +1,12 @@
-<div id="reload_list">
-<%= form_tag({controller: "public", action: "search"}, method: "get") do%>
-  <%= search_field_tag(:search_text, '', placeholder: 'Buscar...') %> 
-  <%= select_tag(:search_category, options_for_select(@search_options))%>
-  <%= submit_tag ('Buscar')%>
+<div id="reload_list" class="container">
+<%= form_tag({controller: "public", action: "search"}, method: "get", class:"form-group") do%>
+  <div class="col-xs-3">
+  	<%= search_field_tag(:search_text, '', placeholder: 'Buscar...',class:"form-control col-sm") %>
+  </div>
+  <div class="col-xs-3"> 
+  	<%= select_tag(:search_category, options_for_select(@search_options), class: "form-control col-sm")%>
+  </div>
+  <%= submit_tag ('Buscar'), class:"btn btn-default"%>
 <%end%>
 <% 
   @job_openings.each do |job_opening|
