--- a/app/views/templates/_public_header.html.erb
+++ b/app/views/templates/_public_header.html.erb
@@ -1,36 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta charset="utf-8">
-		<title>Starter Template (3.0)</title>
-		<meta name="generator" content="Bootply" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-	</head>
 <header>
-</header>
-<script>
-  $(document).ready(function(){
-    $("#login_button").click(function(){
-      $("#login_panel").toggle("slow");
-    });
-  });
-</script>
-
-<body>
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
   <div style="text-align: right">
-    <button id="login_button"  style=" ">Acceder</button>
+    <button id="login_button", class="btn btn-default" >Login</button>
   </div>
   <div id="login_panel" >
 	<%=render file:"app/views/users/sessions/new.html.erb"%>
   </div>
 
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-      	<a class="navbar-brand" href="/"> <img src="/images/logo.png" /></a>
+      <button id="button_colapsed" type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -39,20 +18,27 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Inicio</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#login_button" >Login</a></li>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="https://github.com/manoloonline/JobOpeningCards">Sobre nosotros</a></li>
+        <li><a href="https://github.com/manoloonline/JobOpeningCards">Contacto</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
 </div>
-
-<div class="container">
-  
-
-</div><!-- /.container -->
+</header>
 	<!-- script references -->
-
-	</body>
-</html>
+<script>
+  $(document).ready(function(){
+    $("#login_button").click(function(){
+      $("#login_panel").toggle("slow");
+    });
+  });
+  
+  $(document).ready(function () {
+        var url = window.location;
+        $('ul.nav a[href="'+ url +'"]').parent().addClass('active');
+        $('ul.nav a').filter(function() {
+             return this.href == url;
+        }).parent().addClass('active');
+    });
+</script>
